--- a/emails/MT_EM2.html
+++ b/emails/MT_EM2.html
@@ -231,62 +231,13 @@ tbody p {
  <tr>
   <td valign="top" align="center"><table width="600" border="0" cellspacing="0" cellpadding="0" class="resizetofull">
     <tr>
-     <td valign="top" align="left" style="font-size: 12px; color:#666666;"><!--READ ME: For further modification on the M&T Preference Center's ContentBlockByID be aware this would affect almost all M&T Dynamic Templates. Location: Shared Content\Merkle (Core)\M&amp;T Dynamics Templates\Template Preference Center\M&amp;T Preference Center\M&T Preference Center (Do Not Delete)-->%%=ContentBlockbyId("12821")=%%</td>
+     <td valign="top" align="left" style="font-size: 12px; color:#666666;"><!--READ ME: For further modification on the M&T Preference Center's ContentBlockByID be aware this would affect almost all M&T Dynamic Templates. Location: Shared Content\Merkle (Core)\M&amp;T Dynamics Templates\Template Preference Center\M&amp;T Preference Center\M&T Preference Center (Do Not Delete)--></td>
     </tr>
     <tr>
      <td valign="top" align="left" style="font-size:12px; color:#000001;"></td>
     </tr>
     <tr>
-     <td valign="top" align="left" style="font-size:12px; color:#000001;">%%[
-/*READ: DYNAMIC TEMPLATE INSTRUCTIONS*/
-/*USE "Yes","No" or "None" TO TOGGLE THE FOLLOWING VARIABLE. CHECK CWS*/
-  set @Advertisement = "yes" /* Use "none" here if there's a Custom Banner*/
-  set @CustomBanner = "no"
-  set @CustomBannerAd = "no"
-  set @FooterBar = "yes" 
-  set @EmailPreferences = "yes"
-  set @AppStoreIcons = "yes"
-
-
-/*READ: CAPITALIZE FRIST NAME INSTRUCTIONS*/
-/*YOU MIGHT NEED TO RENAME @FIRST_NAME TO FULL_NAME. CHECK DATA EXTENSION*/
-
-  set @First_Name = Trim(ProperCase(First_Name))
-
-  set @index = IndexOf(@First_Name,'-')
-  set @length = Length(@First_Name)
-
-  if @index > 0 then
-  set @part1 = Substring(@First_Name,0,@index)
-  set @index = Add(@index, 1)
-  set @part2 = ProperCase(Substring(@First_Name, @index, @length))
-  set @First_Name = Concat(@part1,@part2)
-  endif
-
-
-/*READ: RAISE ERROR INSTRUCTIONS*/
-/*REMOVE COMMENTS TAGS AFTER ADDING CRETIVE TYPE. IGNORE OTHERWISE*/
-/* 
-  if Creative_Type == "DMJ" then
-  else RaiseError("Creative_Type not recognized.", true)
-  endif
-*/
-
-set @Creative_Type = Creative_Type
-set @campaignID = "C25"
-set @smartID = "EAE581"
-
- if EMPTY(@First_Name) then
-set @subjectline = "Welcome to your new M&T account!"
-  else
-set @subjectline = concat(@First_Name, ", Thanks for enrolling – M&T Digital Banking is ready to go!")
-  endif
-
-
-if recip_type == "proof" then
-set @subjectline = concat("[",@campaignID,"-",@smartID,"-",recip_type,"-",emailtype,"] ",@subjectline)
-endif
-]%%
+     <td valign="top" align="left" style="font-size:12px; color:#000001;">
 </td>
     </tr>
    </table></td>
@@ -316,22 +267,11 @@ endif
      <tr>
       <td valign="top" align="left" style="padding-bottom:0px;"><table width="100%" border="0" cellspacing="0" cellpadding="0" style="font-family: arial, sans-serif;" class="resizetofull">
         <tr>
-         <td valign="top" align="left" style="background-color:#ffffff;font-family:Arial, sans-serif; font-size:10px; color:#666666;"><a href="https://www.mtb.com/home-page?%%=v(@tracking)=%%" alias="%%=v(@Creative_Type)=%%_IMG/header logo"> %%[if @Advertisement == "yes" then]%% <img src="https://image.mtbemail.com/lib/fe97137075640c7d7c/m/3/5da82adb-e602-4657-a6c9-8bc1bc1b8234.jpg" alt="M&amp;T Bank | Understanding what's important&#x000AE;" width="600" height="80" class="mobile-hide resizetofull" style="display:block;" title="M&amp;T Bank | Understanding what's important&#x000AE;" border="0" /> 
+         <td valign="top" align="left" style="background-color:#ffffff;font-family:Arial, sans-serif; font-size:10px; color:#666666;"><a href="https://www.mtb.com/home-page?%%=v(@tracking)=%%" alias="%%=v(@Creative_Type)=%%_IMG/header logo">  <img src="https://image.mtbemail.com/lib/fe97137075640c7d7c/m/3/5da82adb-e602-4657-a6c9-8bc1bc1b8234.jpg" alt="M&amp;T Bank | Understanding what's important&#x000AE;" width="600" height="80" class="mobile-hide resizetofull" style="display:block;" title="M&amp;T Bank | Understanding what's important&#x000AE;" border="0" /> 
           <!--[if !mso]><!--> 
           <img src="https://image.mtbemail.com/lib/fe97137075640c7d7c/m/3/ea843f73-644c-4f4e-8a80-93a7f82eea5f.jpg" width="360" height="97" border="0" style="display:none;" class="mobile-show resizetofull" alt="M&amp;T Bank | Understanding what's important&#x000AE;" /> 
           <!--<![endif]--> 
-          %%[elseif @Advertisement == "no" then]%% <img src="https://image.mtbemail.com/lib/fe97137075640c7d7c/m/3/0f55fea8-e0e3-4132-9081-70ce3b804a75.jpg" alt="M&T Bank" width="600" height="80" class="mobile-hide resizetofull" style="display:block;" title="M&T Bank" border="0" /> 
-          <!--[if !mso]><!--> 
-          <img src="https://image.mtbemail.com/lib/fe97137075640c7d7c/m/3/a45d5981-edf0-4c54-af08-240629a8e636.jpg" width="360" height="80" border="0" style="display:none;" class="mobile-show resizetofull" alt="M&T Bank" /> 
-          <!--<![endif]--> 
-          %%[elseif @Advertisement == "none" then]%% %%[endif]%% </a> %%[if @CustomBanner == "yes" then]%%
-          <a href="https://www.mtb.com/home-page?%%=v(@tracking)=%%" alias="%%=v(@Creative_Type)=%%_IMG/header logo">
-  <img src="https://via.placeholder.com/600x80/096340/FFFFFF?text=Custom+Banner" alt="M&amp;T Bank" width="600" class="mobile-hide resizetofull" style="display:block;" title="M&amp;T Bank" border="0" />
-  <!--[if !mso]><!-->
-  <img src="https://via.placeholder.com/360x75/096340/FFFFFF?text=Mobile+Custom+Banner" width="360" height="75" border="0" style="display:none;" class="mobile-show resizetofull" alt="M&T Bank" />
-  <!--<![endif]-->
-</a>
-          %%[elseif @CustomBanner == "no" then]%% %%[endif]%% </td>
+         </td>
         </tr>
        </table></td>
      </tr>
@@ -497,7 +437,7 @@ M&amp;T Digital<span>&nbsp;</span>Banking.
         <tr>
          <td valign="top" bgcolor="#007855" class="resizetofull"><table align="center" width="100%" class="resizetofull textcenter" border="0" cellspacing="0" cellpadding="0" bgcolor="#007855">
            <tr>
-            <td valign="top" align="center" class="textcenter" style="font-family:Arial, sans-serif; font-size:13px; color:#FFFFFF; font-weight:bold; padding-top:10px; padding-bottom:10px;">%%[if @FooterBar == "yes" then]%%<a href="https://www.mtb.com/help-center/contact?%%=v(@tracking)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Contact Us" style="text-decoration:none; color:#FFFFFF;">CONTACT US</a> <span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span>|<span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span> <a href="https://locations.mtb.com?%%=v(@tracking)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Locations" style="text-decoration:none; color:#FFFFFF;">LOCATIONS</a><span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span>%%[if @EmailPreferences == "yes" then]%%|<span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span> <a href="https://www.mtb.com/banking/online-mobile-services?%%=v(@tracking)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Online Banking" style="text-decoration:none; color:#FFFFFF;">ONLINE BANKING</a><span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span>|<span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span> <a href="%%=RedirectTo(@prefCenterLink)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Email Preferences" style="text-decoration:none; color:#FFFFFF;">EMAIL PREFERENCES</a>%%[else]%% %%[endif]%% %%[else]%% %%[endif]%%</td>
+            <td valign="top" align="center" class="textcenter" style="font-family:Arial, sans-serif; font-size:13px; color:#FFFFFF; font-weight:bold; padding-top:10px; padding-bottom:10px;"><a href="https://www.mtb.com/help-center/contact?%%=v(@tracking)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Contact Us" style="text-decoration:none; color:#FFFFFF;">CONTACT US</a> <span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span>|<span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span> <a href="https://locations.mtb.com?%%=v(@tracking)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Locations" style="text-decoration:none; color:#FFFFFF;">LOCATIONS</a><span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span>|<span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span> <a href="https://www.mtb.com/banking/online-mobile-services?%%=v(@tracking)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Online Banking" style="text-decoration:none; color:#FFFFFF;">ONLINE BANKING</a><span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span>|<span>&nbsp;</span><span>&nbsp;</span> <span class="mobile-hide"><span>&nbsp;</span><span>&nbsp;</span></span> <a href="%%=RedirectTo(@prefCenterLink)=%%" target="_blank" alias="%%=v(@Creative_Type)=%%_FOOTER/Email Preferences" style="text-decoration:none; color:#FFFFFF;">EMAIL PREFERENCES</a></td>
            </tr>
           </table></td>
         </tr>
@@ -516,7 +456,7 @@ M&amp;T Digital<span>&nbsp;</span>Banking.
      <tr>
       <td valign="top" align="center"><table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-         <td valign="top" bgcolor="#EDEDED" class="resizetofull" style="font-family:Arial, sans-serif; font-size:10px; color:#666666;"><!-- MOBILE 1 -->%%[if @AppStoreIcons == "yes" then]%%
+         <td valign="top" bgcolor="#EDEDED" class="resizetofull" style="font-family:Arial, sans-serif; font-size:10px; color:#666666;"><!-- MOBILE 1 -->
           <table align="left" width="267" class="resizetofull textcenter" border="0" cellspacing="0" cellpadding="0">
            <tr>
             <td valign="top" align="left" class="textcenter" style="padding-top:25px;"><table width="100%" border="0" cellspacing="0" cellpadding="0" class="iconWidth">
@@ -530,7 +470,7 @@ M&amp;T Digital<span>&nbsp;</span>Banking.
              </table></td>
            </tr>
           </table>
-          %%[elseif @AppStoreIcons == "no" then]%% %%[endif]%% 
+        
           <!-- MOBILE 2 -->
           
           <table align="center" width="329" class="resizetofull textcenter" border="0" cellspacing="0" cellpadding="0">
@@ -579,16 +519,16 @@ EAE581 DMJ 2/22
           <strong>PROTECT YOUR PERSONAL<span>&nbsp;</span>INFORMATION</strong> <br />
           M&amp;T Bank does NOT initiate emails seeking personal information such as account numbers, card PINs and Social Security numbers. If you receive a suspicious email, please forward it, as an attachment, to us at <a style="color: #000001; text-decoration: underline;" title="" href="mailto:phishing@mtb.com" alias="%%=v(@Creative_Type)=%%_LINK/phishing-email">phishing@mtb.com</a>. For more fraud prevention tips, visit our <a style="color: #000001;text-decoration: underline;" href="https://www.mtb.com/help-center/banking-security?%%=v(@tracking)=%%" alias="%%=v(@Creative_Type)=%%_LINK/Security Center" target="_blank">Security Center</a>. You can also view our <a style="color: #000001;text-decoration: underline;" href="https://www.mtb.com/help-center/policies/privacy-policy?%%=v(@tracking)=%%" alias="%%=v(@Creative_Type)=%%_LINK/Privacy Policy" target="_blank">Privacy<span>&nbsp;</span>Policy</a>. <br />
           <br />
-          %%[if @EmailPreferences == "yes" then]%% <strong>UPDATE YOUR EMAIL PREFERENCES</strong> <br />
-          This email was sent to <a style="color: #000001; text-decoration: underline; cursor:text;" href="#">%%emailaddr%%</a>. If you'd like to update your email preferences, please visit our <a style="color: #000001;text-decoration: underline;" title="" href="%%=RedirectTo(@prefCenterLink)=%%" alias="%%=v(@Creative_Type)=%%_LINK/Email Preference Center" target="_blank">Email Preference Center</a>. To ensure proper delivery to your inbox, please add <a style="color: #000001; text-decoration: none; cursor:text;" href="#">MTB@email.mtb.com</a> to your email address<span>&nbsp;</span>book. <br />
+         <strong>UPDATE YOUR EMAIL PREFERENCES</strong> <br />
+          This email was sent to <a style="color: #000001; text-decoration: underline; cursor:text;" href="#">fakeemail@gmail.com</a>. If you'd like to update your email preferences, please visit our <a style="color: #000001;text-decoration: underline;" title="" href="https://www3.mtb.com/help-center/policies/unsubscribe-mt-emails" alias="%%=v(@Creative_Type)=%%_LINK/Email Preference Center" target="_blank">Email Preference Center</a>. To ensure proper delivery to your inbox, please add <a style="color: #000001; text-decoration: none; cursor:text;" href="#">MTB@email.mtb.com</a> to your email address<span>&nbsp;</span>book. <br />
           <br />
-          %%[else]%% %%[endif]%% <strong>HOW TO UNSUBSCRIBE</strong> <br />
-          %%[if @Advertisement == "yes" OR @CustomBannerAd == "yes" then]%%<em>This is an advertisement from M&amp;T Bank</em>. %%[else]%% %%[endif]%% As a subscriber of our email list, you can be among the first to know about special offers and promotions from M&amp;T Bank via email. Of course, if you choose not to receive emails from M&amp;T Bank, you can <a style="color:#000001; text-decoration: underline;" title="" href="%%=RedirectTo(@optOutLink)=%%" alias="%%=v(@Creative_Type)=%%_LINK/UNSUBSCRIBE" target="_blank">UNSUBSCRIBE</a> or call <a href="tel:18007853162" alias="%%=v(@Creative_Type)=%%_TEL/1-800-785-3162" style="color: #000001; text-decoration: underline;">1&#8209;800&#8209;785&#8209;3162</a> and we will remove you from our email list. Please note, if you choose to opt-out of email, you still may receive service and legal announcements as well as transactional emails regarding your M&amp;T account(s) in accordance with your M&amp;T service<span>&nbsp;</span>agreements. <br />
+       <strong>HOW TO UNSUBSCRIBE</strong> <br />
+         <em>This is an advertisement from M&amp;T Bank</em>. As a subscriber of our email list, you can be among the first to know about special offers and promotions from M&amp;T Bank via email. Of course, if you choose not to receive emails from M&amp;T Bank, you can <a style="color:#000001; text-decoration: underline;" title="" href="https://www3.mtb.com/help-center/policies/unsubscribe-mt-emails" alias="%%=v(@Creative_Type)=%%_LINK/UNSUBSCRIBE" target="_blank">UNSUBSCRIBE</a> or call <a href="tel:18007853162" alias="%%=v(@Creative_Type)=%%_TEL/1-800-785-3162" style="color: #000001; text-decoration: underline;">1&#8209;800&#8209;785&#8209;3162</a> and we will remove you from our email list. Please note, if you choose to opt-out of email, you still may receive service and legal announcements as well as transactional emails regarding your M&amp;T account(s) in accordance with your M&amp;T service<span>&nbsp;</span>agreements. <br />
           <br />
           <table width="100%" border="0" cellspacing="0" cellpadding="0">
            <tr>
             <td width="30" valign="top" align="left"><img alt="EHL" src="https://image.mtbemail.com/lib/fe97137075640c7d7c/m/3/f9573738-04f2-4132-8332-763ba24e83eb.png" width="25" height="17" /></td>
-            <td align="left" valign="middle" style="font-family:Arial, sans-serif; font-size:10px; color:#000001; padding-top:5px;">Equal Housing Lender. &copy;%%XTYEAR%% M&amp;T Bank. Member<span>&nbsp;</span>FDIC. <br></td>
+            <td align="left" valign="middle" style="font-family:Arial, sans-serif; font-size:10px; color:#000001; padding-top:5px;">Equal Housing Lender. &copy;2022 M&amp;T Bank. Member<span>&nbsp;</span>FDIC. <br></td>
            </tr>
           </table></td>
         </tr>
